fixed button styles & alignment

--- a/style.css
+++ b/style.css
@@ -1,140 +1,165 @@
-.navbar {
-    background-color: white;
-}
-
-.gallery {
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
-    -webkit-column-width: 32%;
-    -moz-column-width: 32%;
-    column-width: 32%;
-}
-
-.gallery .pics {
-    -webkit-transition: all 350ms ease;
-    transition: all 350ms ease;
-}
-
-.gallery .animation {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-}
-
-@media (max-width: 450px) {
-    .gallery {
-        -webkit-column-count: 1;
-        -moz-column-count: 1;
-        column-count: 1;
-        -webkit-column-width: 100%;
-        -moz-column-width: 100%;
-        column-width: 100%;
-    }
-}
-
-@media (max-width: 400px) {
-    .btn.filter {
-        padding-left: 1.1rem;
-        padding-right: 1.1rem;
-    }
-}
-
-@media (min-width: 576px) {
-    .container-fluid
-}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-    ...
-}
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
-    ...
-}
-
-/// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-    ...
-}
-
-.img-fluid:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    cursor: pointer;
-}
-
-.myForm {
-    min-width: 500px;
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 2.5rem
-}
-
-@media (max-width: 500px) {
-    .myForm {
-        min-width: 90%;
-    }
-}
-
-footer {
-    background-color: black;
-}
-
-.container {
-    margin-top: 100px;
-}
-
-img {
-    width: 400px;
-    height: 100px;
-    align-items: center;
-}
-
-#navbarlogo {
-    width: 170px;
-    height: 40px;
-}
-
-#footer-text {
-    color: white;
-}
-
-#sign-out {
-    background-color: #fe7e08;
-    margin-left: 5px;
-}
-
-#buttonsArea {
-    margin: 5px;
-}
-
-#login-btn {
-    background-color: #fe7e08;
-}
-
-btn btn-primary btn-outline-black waves-effect filter {
-    margin: 5px;
-    color: #fe7e08;
-}
-
-<<<<<<< HEAD
-#aboutpic {
-    height: 100px;
-    widows: 150px;
-    ;
-=======
-.canvas {
-     width: auto;
-     padding-left: 25%;
-     padding-top: 5%;
-}
-
-#btncropper {
-     border: none; 
-     
->>>>>>> master
-}
+            .navbar {
+                background-color: white;
+            }
+            
+            .gallery {
+                -webkit-column-count: 3;
+                -moz-column-count: 3;
+                column-count: 3;
+                -webkit-column-width: 32%;
+                -moz-column-width: 32%;
+                column-width: 32%;
+            }
+            
+            .gallery .pics {
+                -webkit-transition: all 350ms ease;
+                transition: all 350ms ease;
+            }
+            
+            .gallery .animation {
+                -webkit-transform: scale(1);
+                -ms-transform: scale(1);
+                transform: scale(1);
+            }
+            
+            @media (max-width: 450px) {
+                .gallery {
+                    -webkit-column-count: 1;
+                    -moz-column-count: 1;
+                    column-count: 1;
+                    -webkit-column-width: 100%;
+                    -moz-column-width: 100%;
+                    column-width: 100%;
+                }
+            }
+            
+            @media (max-width: 400px) {
+                .btn.filter {
+                    padding-left: 1.1rem;
+                    padding-right: 1.1rem;
+                }
+            }
+            
+            @media (min-width: 576px) {
+                .container-fluid
+            }
+            
+            // Medium devices (tablets, 768px and up)
+            @media (min-width: 768px) {
+                ...
+            }
+            
+            // Large devices (desktops, 992px and up)
+            @media (min-width: 992px) {
+                ...
+            }
+            
+            /// Extra large devices (large desktops, 1200px and up)
+            @media (min-width: 1200px) {
+                ...
+            }
+            
+            .img-fluid:hover {
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                cursor: pointer;
+            }
+            
+            .myForm {
+                min-width: 500px;
+                position: absolute;
+                text-align: center;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-size: 2.5rem
+            }
+            
+            @media (max-width: 500px) {
+                .myForm {
+                    min-width: 90%;
+                }
+            }
+            
+            #nonkanyefooter {
+                background-color: black;
+            }
+            
+            .container {
+                margin-top: 100px;
+            }
+            
+            img {
+                width: 400px;
+                height: 100px;
+                align-items: center;
+            }
+            
+            #navbarlogo {
+                width: 170px;
+                height: 40px;
+            }
+            
+            #footer-text {
+                color: white;
+            }
+            
+            #sign-out {
+                background-color: #fe7e08;
+                color: white;
+                margin-left: 5px;
+            }
+            
+            #buttonsArea {
+                margin: 5px;
+            }
+            
+            #login-btn {
+                background-color: #fe7e08;
+            }
+            
+            .btn-primary,
+            .btn-outline-black,
+            .waves-effect {
+                margin: 5px;
+                color: white;
+                border: #fe7e08;
+            }
+            
+            #aboutpic {
+                height: 150px;
+                width: auto;
+            }
+            
+            .canvas {
+                width: auto;
+                padding-left: 25%;
+                padding-top: 5%;
+            }
+            
+            #btncropper {
+                border: none;
+            }
+            
+            .btn {
+                background-color: #fe7e08 !important;
+            }
+            
+            #searchbtn {
+                color: white;
+            }
+            
+            #gallery {
+                margin-top: 0px;
+            }
+            
+            .media {
+                padding: 20px 0px 20px 0px;
+            }
+            
+            #spacer {
+                padding-top: 20px;
+            }
+            
+            .modal-body {
+                align-content: center;
+            }
